--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -2,9 +2,18 @@
 @import 'tools/_fonts';
 @import 'tools/_settings';
 @import 'tools/_jquery.fullPage';
+@import 'tools/_slick-theme';
 
 @import 'components/_btn';
 
 @import 'sections/_page-header';
-@import 'sections/_features';
-@import 'sections/_page-footer';
+@import 'sections/_section1';
+@import 'sections/_section2';
+@import 'sections/_section3';
+@import 'sections/_section4';
+@import 'sections/_section5';
+@import 'sections/_section6';
+@import 'sections/_section7';
+@import 'sections/_section8';
+@import 'sections/_section9';
+@import 'sections/_section10';
