--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -9,7 +9,8 @@ head
   link(rel="stylesheet" href="stylesheets/app.css")
 body
   header.page-header
-    a(href="#").page-header__logo
+    .page-header__logo-wrapper
+      a(href="#").page-header__logo
     .page-header__location-time-wrapper
       .page-header__location
         span
@@ -17,14 +18,15 @@ body
       .page-header__time
         span
         |  с пн.-пт. с 9-00 до 19-00
-    .page-header__mail
-      a(href= "mailto:moll.avtolombard@mail.ru")
-        | moll.avtolombard@mail.ru
-    .page-header__tel
-      | +7 922 183-12-52
-    .page-header__tel-btn
-      | Заказать звонок
-    a(href="").burger.menu-btn
+    .page-header-wrapper
+      .page-header__mail
+        a(href= "mailto:moll.avtolombard@mail.ru")
+          | moll.avtolombard@mail.ru
+      .page-header__tel
+        | +7 922 183-12-52
+      a(href="#").page-header__tel-btn
+        | Заказать звонок
+      a(href="#").burger.menu-btn
     .page-header.main-nav
       ul
         li
@@ -67,39 +69,38 @@ body
             | Автомобиль остается у Вас
         .section1__text
           | Для подачи заявки на займ под ПТС оставьте Ваши данные ниже и мы сами свяжемся с Вами в течении 2 минут
-      form(action="#" method="#").section1__form
-        input(type="text" name="your-name" placeholder="Имя")
-        input(type="tel" name="your-tel" placeholder="Телефон")
-        .checkbox-wrapper
-          .checkbox-wrapper__checkbox
-            input(type="checkbox" checked)
-            .checkbox
-              span.checkbox__circle
-              span.checkbox__yes.checkbox-active
-                | да
-              span.checkbox__no
-                | нет
-          .checkbox-wrapper__text
-            .checkbox-wrapper__text-1
-              | Даю согласие на
-              a(href="#")Обработку персональных данных
-            .checkbox-wrapper__text-2
-              | Ваши данные не будут переданы третьим лицам
-        a(href="#").btn.section1__form-btn
-          | Звоните
-      .section1__features
-        .section1__features-item
-          .section1__features-item-icon.section1__features-item-icon-1
-          .section1__features-item-text
-            | При заключении договора, деньги наличными сразу
-        .section1__features-item
-          .section1__features-item-icon.section1__features-item-icon-2
-          .section1__features-item-text
-            | Пересчет процентов за пользование займом по дням
-        .section1__features-item
-          .section1__features-item-icon.section1__features-item-icon-3
-          .section1__features-item-text
-            | Не требуются доверенность или договор купли-продажи
+        form(action="#" method="#").section1__form
+          input(type="text" name="your-name" placeholder="Имя").section1__form-text
+          input(type="tel" name="your-tel" placeholder="Телефон").section1__form-text.section1__form-tel
+          label.checkbox-wrapper
+            .checkbox-wrapper__checkbox
+              input(type="checkbox" checked).section1__form-checkbox
+              .checkbox
+                span.checkbox__circle
+                span.checkbox__yes.checkbox-active
+                  | да
+            .checkbox-wrapper__text
+              .checkbox-wrapper__text-1
+                | Даю согласие на
+                =' '
+                a(href="#")Обработку персональных данных
+              .checkbox-wrapper__text-2
+                | Ваши данные не будут переданы третьим лицам
+          a(href="#").btn.section1__form-btn
+            | Звоните
+        .section1__features
+          .section1__features-item
+            .section1__features-item-icon.section1__features-item-icon-1
+            .section1__features-item-text
+              | При заключении договора, деньги наличными сразу
+          .section1__features-item
+            .section1__features-item-icon.section1__features-item-icon-2
+            .section1__features-item-text
+              | Пересчет процентов за пользование займом по дням
+          .section1__features-item
+            .section1__features-item-icon.section1__features-item-icon-3
+            .section1__features-item-text
+              | Не требуются доверенность или договор купли-продажи
 
     .section.section2
       .container
