--- a/app/stylesheets/tools/_fonts.scss
+++ b/app/stylesheets/tools/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
-	font-family: 'Futura PT Book';
-	src: url('../fonts/FuturaPT-Book.eot');
-	src: url('../fonts/FuturaPT-Book.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/FuturaPT-Book.woff') format('woff'),
-		url('../fonts/FuturaPT-Book.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
 	font-family: 'Roboto';
 	src: url('../fonts/Roboto-Regular.eot');
 	src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/Roboto-Regular.woff') format('woff'),
 		url('../fonts/Roboto-Regular.ttf') format('truetype');
 	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto-Medium.eot');
+	src: url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Roboto-Medium.woff') format('woff'),
+		url('../fonts/Roboto-Medium.ttf') format('truetype');
+	font-weight: 500;
 	font-style: normal;
 }
 
