--- a/app/stylesheets/tools/_jquery.fullPage.scss
+++ b/app/stylesheets/tools/_jquery.fullPage.scss
@@ -52,6 +52,7 @@ html.fp-enabled,
 }
 .fp-tableCell {
     display: table-cell;
+    padding-top: 100px;
     vertical-align: middle;
     width: 100%;
     height: 100%;
