--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -146,24 +146,29 @@ body
           | преимущества
         .section3__text
           | Почему Вам  выгодно взять займ у нас
-        .section3.big-slider
-          .big-slider__slide-1
+        .section3__big-slider
+          .big-slider__slide.big-slider__slide-1
             .big-slider__slide-circle
-            .big-slider__slide-foto.big-slider__slide-foto-1
-          .big-slider__slide-2
+            img(src="../images/features-slide1.png").big-slider__slide-foto-1
+
+          .big-slider__slide.big-slider__slide-2
             .big-slider__slide-circle
-            .big-slider__slide-foto.big-slider__slide-foto-2
-          .big-slider__slide-3
+            img(src="../images/features-slide2.png").big-slider__slide-foto-2
+
+          .big-slider__slide.big-slider__slide-3
             .big-slider__slide-circle
-            .big-slider__slide-foto.big-slider__slide-foto-3
-          .big-slider__slide-4
+            img(src="../images/features-slide3.png").big-slider__slide-foto-3
+
+          .big-slider__slide.big-slider__slide-4
             .big-slider__slide-circle
-            .big-slider__slide-foto.big-slider__slide-foto-4
+            img(src="../images/features-slide4.png").big-slider__slide-foto-4
+
             .big-slider__slide-foto-4-img
-          .big-slider__slide-5
+          .big-slider__slide.big-slider__slide-5
             .big-slider__slide-circle
-            .big-slider__slide-foto.big-slider__slide-foto-5
-        .section3.min-slider
+            img(src="../images/features-slide5.png").big-slider__slide-foto-5
+
+        .section3__min-slider
           .min-slider__slide-1
             .min-slider__icon.min-slider__icon-1
             .min-slider__text
