--- a/app/stylesheets/tools/_settings.scss
+++ b/app/stylesheets/tools/_settings.scss
@@ -14,7 +14,7 @@ a {
 
 .container {
   position: relative;
-  overflow: hidden;
+  //overflow: hidden;
 
   max-width: 1200px;
   padding: 0 14px;
@@ -23,4 +23,8 @@ a {
 
 .hidden {
   display: none;
+}
+
+.slick-list {
+  overflow: visible;
 }
