--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -171,32 +171,43 @@ body
         .section3__min-slider
           .min-slider__slide-1
             .min-slider__icon.min-slider__icon-1
+              img(src="../images/features-icon1.png")
             .min-slider__text
               | Не требуем генеральной доверенности и договор купли-продажи
           .min-slider__slide-2
             .min-slider__icon.min-slider__icon-2
+              img(src="../images/features-icon2.png")
             .min-slider__text
-              | Пересчет процентов за пользование займом по дням
+              | Пересчет процентов
+              br.min-slider__text
+              за пользование займом по дням
           .min-slider__slide-3
             .min-slider__icon.min-slider__icon-3
+              img(src="../images/features-icon3.png")
             .min-slider__text
-              | При заключении договора, деньги наличными сразу
+              | При заключении договора,
+              br.min-slider__text
+              деньги наличными сразу
           .min-slider__slide-4
             .min-slider__icon.min-slider__icon-4
+              img(src="../images/features-icon3.png")
             .min-slider__text
               | Высокая лояльность к клиентам
           .min-slider__slide-5
             .min-slider__icon.min-slider__icon-5
+              img(src="../images/features-icon3.png")
             .min-slider__text
-              | Работаем официально, состоим на учете в ЦБ
+              | Работаем официально, состоим
+              br.min-slider__text
+              на учете в ЦБ
     .section.section4
       .container
-        .section__title
+        .section__title.section4__title
           | ставки, условия
         .section4__text
           | Меньше сроки - меньше процент!
+        .section4__seven
         .section4__percent
-          .section4__percent-digit
           .section4__percent-text-1
             | Низкий процент ставок!
           .section4__percent-text-2
@@ -206,22 +217,30 @@ body
             .section__passport-item
               .section__passport-icon.section4__passport-icon-1
               .section__passport-text
-                | Паспорт гражданина РФ
+                | Паспорт
+                br.section__passport-text-br
+                | гражданина РФ
             .section__passport-item
               .section__passport-icon.section4__passport-icon-2
               .section__passport-text
-                | Паспорт технического средства (ПТС)
+                | Паспорт технического
+                br.section__passport-text-br
+                | средства (ПТС)
             .section__passport-item
               .section__passport-icon.section4__passport-icon-3
               .section__passport-text
-                | Свидетельство о регистрации транспортного средства
+                | Свидетельство о регистрации
+                br.section__passport-text-br
+                | транспортного средства
             .section__passport-item
               .section__passport-icon.section4__passport-icon-4
               .section__passport-text
-                | Комплект ключей и брелоков
+                | Комплект ключей
+                br.section__passport-text-br
+                | и брелоков
     .section.section5
       .container
-        .section__title
+        .section__title.section5__title
           | о компании
         .section5__text
           div
@@ -236,8 +255,10 @@ body
           | Получить займм
     .section.section6
       .container
-        .section__title
+        .section__title.section6__title
           | условия займа
+        .section6__text
+          | Необходимые требования для получения займа
         .section6__content
           .section6__content-block
             .section6__content-block-icon.section6__content-block-icon-1
