--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -260,7 +260,7 @@ body
         .section6__text
           | Необходимые требования для получения займа
         .section6__content
-          .section6__content-block
+          .section6__content-block.section6__content-block-1
             .section6__content-block-icon.section6__content-block-icon-1
             .section6__content-block-title
               | Требования к заемщику
@@ -270,7 +270,9 @@ body
               li
                 | Заемщик является собственником автотранспортного средства
               li
-                | Место постоянного проживания и прописка в Свердловской области
+                | Место постоянного проживания
+                br
+                | и прописка в Свердловской области
               li
                 | Отсутствие исполнительных производств
           .section6__content-block
@@ -286,24 +288,24 @@ body
                 | Не заложен в банке и не обременен правами третьих лиц
               li
                 | Отсутствие арестов и ограничений
-          .section__passport
-            .section__passport-wrapper
-              .section__passport-item
-                .section__passport-icon.section4__passport-icon-1
-                .section__passport-text
-                  | Паспорт гражданина РФ
-              .section__passport-item
-                .section__passport-icon.section4__passport-icon-2
-                .section__passport-text
-                  | Паспорт технического средства (ПТС)
-              .section__passport-item
-                .section__passport-icon.section4__passport-icon-3
-                .section__passport-text
-                  | Свидетельство о регистрации транспортного средства
-              .section__passport-item
-                .section__passport-icon.section4__passport-icon-4
-                .section__passport-text
-                  | Комплект ключей и брелоков
+        .section__passport
+          .section__passport-wrapper
+            .section__passport-item
+              .section__passport-icon.section4__passport-icon-1
+              .section__passport-text
+                | Паспорт гражданина РФ
+            .section__passport-item
+              .section__passport-icon.section4__passport-icon-2
+              .section__passport-text
+                | Паспорт технического средства (ПТС)
+            .section__passport-item
+              .section__passport-icon.section4__passport-icon-3
+              .section__passport-text
+                | Свидетельство о регистрации транспортного средства
+            .section__passport-item
+              .section__passport-icon.section4__passport-icon-4
+              .section__passport-text
+                | Комплект ключей и брелоков
     .section.section7
       .container
         .section__title
