--- a/app/stylesheets/sections/_section6.scss
+++ b/app/stylesheets/sections/_section6.scss
@@ -13,18 +13,83 @@
   color: #030206;
 }
 
-.section6__content-block {
-  display: inline-block;
-  padding-left: 114px;
-  padding-top: 31px;
+.section6__content {
+  padding-left: 50px;
+}
 
+.section6__content-block {
+  position: relative;
+
+  display: inline-block;
+  vertical-align: top;
   width: 486px;
   height: 375px;
+  padding-left: 114px;
+  padding-top: 31px;
+  margin-bottom: 61px;
+
+
   border: solid 10px #dcdcdc;
 }
 
 .section6__content-block-title {
+  margin-bottom: 40px;
+
   font-family: Intro;
   font-size: 18px;
   color: #030206;
+}
+
+.section6__content-block ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.section6__content-block li {
+  position: relative;
+  max-width: 280px;
+  width: 100%;
+  margin-bottom: 25px;
+
+  font-size: 14px;
+  line-height: 1.71;
+  color: #030206;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 9px;
+    left: -23px;;
+
+    display: block;
+    width: 8px;
+    height: 8px;
+    background-color: #accc3d;
+    border-radius: 50%;
+
+  }
+}
+
+.section6__content-block-1 {
+  margin-right: 146px;
+}
+
+.section6__content-block-icon {
+  position: absolute;
+  top: 55px;
+  left: -55px;;
+
+  width: 103px;
+  height: 103px;
+}
+
+.section6__content-block-icon-1 {
+  background: url('../images/icon-man-3.png') no-repeat center;
+  background-size: contain;
+}
+
+.section6__content-block-icon-2 {
+  background: url('../images/icon-car.png') no-repeat center;
+  background-size: contain;
 }
