--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -308,7 +308,7 @@ body
                 | Комплект ключей и брелоков
     .section.section7
       .container
-        .section__title
+        .section__title.section7__title
           | лицензии и документы
         .section7__text
           | Взяв у нас займ, Вы ни чем не рискуете. Мы работаем открыто!
